<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout style="@style/layoutFormat">
        <TextView style="@style/labelFormat"
            android:text="@string/repo_id"/>
        <TextView style="@style/valueFormat"
            android:id="@+id/repoIdTxt"
            tools:text="123456"/>
        <TextView style="@style/counterFormat"
            android:id="@+id/repoCounterTxt"
            tools:text="(123)"/>
    </LinearLayout>

    <LinearLayout style="@style/layoutFormat">
        <TextView style="@style/labelFormat"
            android:text="@string/repo_name"/>
        <TextView style="@style/valueFormat"
            android:id="@+id/repoNameTxt"
            tools:text="Repo Name"/>
    </LinearLayout>

    <LinearLayout style="@style/layoutFormat">
        <TextView style="@style/labelFormat"
            android:text="@string/repo_url"/>
        <TextView style="@style/valueFormat"
            android:id="@+id/repoUrlTxt"
            tools:text="http://repo.url.com"/>
    </LinearLayout>

    <LinearLayout style="@style/layoutFormat">
        <TextView style="@style/labelFormat"
            android:text="@string/repo_size"/>
        <TextView style="@style/valueFormat"
            android:id="@+id/repoSizeTxt"
            tools:text="123"/>
    </LinearLayout>

    <LinearLayout style="@style/layoutFormat">
        <TextView style="@style/labelFormat"
            android:text="@string/repo_description"/>
        <TextView style="@style/valueFormat"
            android:id="@+id/repoDescTxt"
            tools:text="This is a Repo description"/>
    </LinearLayout>

    <!--Divider item separator-->
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?attr/colorPrimary"/>

    <!--funzionano anche questi:-->
        <!--style="@style/line_divider"/>-->
        <!--style="?attr/lineDivider"/>-->
        <!--android:background="@color/darkGray"/>-->


    <!--see: https://mobikul.com/create-custom-attributes-reference-color-style-xml-android/-->
    <!--see: http://www.sherif.mobi/2012/12/applying-style-to-views-dynamically-in.html-->

</LinearLayout>